--- a/package.json
+++ b/package.json
@@ -2,26 +2,40 @@
   "name": "easybank-landing-page",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.production.config.js",
-    "dev": "webpack serve --config webpack.dev.config.js --hot"
+    "build": "webpack"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Psoccrates/easybank-landing-page.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@babel/core": "^7.15.8",
-    "babel-loader": "^8.2.3",
+  "bugs": {
+    "url": "https://github.com/Psoccrates/easybank-landing-page/issues"
+  },
+  "homepage": "https://github.com/Psoccrates/easybank-landing-page#readme",
+  "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.0",
+    "file-loader": "^6.2.0",
+    "handlebars-loader": "^1.7.1",
+    "mini-css-extract-plugin": "^2.4.3",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.2.4",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1"
   },
-  "devDependencies": {
+  "dependencies": {
+    "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
-    "clean-webpack-plugin": "^4.0.0",
+    "babel-loader": "^8.2.3",
+    "font-awesome": "^4.7.0",
+    "handlebars": "^4.7.7",
     "html-webpack-plugin": "^5.5.0",
-    "terser-webpack-plugin": "^5.2.4",
-    "webpack-dev-server": "^4.3.1"
+    "lodash": "^4.17.21"
   }
 }
