--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mini-css-extract-plugin": "^2.4.3",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.2.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1"
   },
