--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --config webpack.production.config.js",
+    "dev": "webpack serve --config webpack.dev.config.js --hot"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,8 @@
     "terser-webpack-plugin": "^5.2.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.60.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
     "@babel/core": "^7.15.8",
@@ -37,6 +39,7 @@
     "font-awesome": "^4.7.0",
     "handlebars": "^4.7.7",
     "html-webpack-plugin": "^5.5.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "webpack-dev-middleware": "^5.2.1"
   }
 }
