--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "homepage": "https://github.com/Psoccrates/easybank-landing-page#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.0",
     "file-loader": "^6.2.0",
     "handlebars-loader": "^1.7.1",
+    "html-loader": "^3.0.0",
     "mini-css-extract-plugin": "^2.4.3",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.2.4",
